Prevent whitespace breaking in header title and date elements.

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@ body {
     margin: 0 0 1.75rem;
     font-size: 2em;
     line-height: 1;
+    white-space: nowrap;
 }
 
 @media (min-width: 900px) {
@@ -53,6 +54,7 @@ body {
 
 .header__date {
     font-size: 1em;
+    white-space: nowrap;
 }
 
 @media (min-width: 900px) {
